# tthresh

./: .gitmodules  CMakeLists.txt  README.md  compress.cpp  compress.hpp  decode.cpp  decode.hpp  decompress.cpp  decompress.hpp  encode.cpp  encode.hpp  tthresh.cpp  tthresh.hpp  tucker.hpp
data/: 3D_sphere_64_uchar.raw
src/: Slice.hpp  compress.hpp  decode.hpp  decompress.hpp  encode.hpp  io.hpp  tthresh.cpp  tthresh.hpp  tucker.hpp  zlib_io.hpp
